# ohmni

./: .gitignore  PROTOCOL_ANALYSIS.md  README.md  ohmni_main_bundle.js  ohmni_main_pretty.js  ohmni_vendor_bundle.js  ohmni_vendor_pretty.js  run_autonomous_scan.py  run_ohmni.py  run_ohmni_full.py  trigger_explore.py
.planning/: README.md
.planning/phases/: 00-autonomous-scan.md  01-peripheral-skills.md  02-llm-driver.md  03-perception-stack.md  04-autoresearch-loop.md  05-safe-free-roam.md
control-app/: bot_shell_lidar_dimos.js  bot_shell_lidar_original.js  bot_shell_lidar_patched.js  lidar_reader.js  mapper.js  server.js
dimos-ohmni/: pyproject.toml
dimos-ohmni/src/dimos_ohmni/: __init__.py  audio.py  brain.py  bridge.py  camera.py  connection.py  drive.py  face.py  lidar.py  safety.py  telemetry.py  types.py  web_research.py
dimos-ohmni/src/dimos_ohmni/autoresearch/: README.md  __init__.py  journal.py  loop_base.py  orchestrator.py
dimos-ohmni/src/dimos_ohmni/autoresearch/microloops/: __init__.py  calibration.py  exploration.py  github_research.py  skill_probe.py  web_research.py
dimos-ohmni/src/dimos_ohmni/blueprints/: agentic.py  basic.py  free_roam.py  full.py  smart.py
dimos-ohmni/src/dimos_ohmni/perception/: __init__.py  semantic_pin.py
dimos-ohmni/tests/: conftest.py  test_bridge.py  test_camera.py  test_drive.py  test_lidar.py
docs/: CONNECTING_TO_A_NEW_ROBOT.md  DEVELOPER_NOTES.md  HOST_SETUP.md
memory/: MEMORY.md  project_robot_setup.md
ohmni_archive/: archive.sh
patches/: dimos-robot-all_blueprints.patch
(+7 files in other folders)
